Fixing spacing and alignment of the home hero labels.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -231,7 +231,8 @@ section {
 }
 
 #home-hero-labels {
-    margin: 0;
+    align-self: start;
+    margin-top: 1rem;
     grid-column: 1 / span 8;
     grid-row: 2 / span 1;
 }
@@ -589,7 +590,7 @@ lottie-player {
     }
 
     .label-list {
-        column-gap: 0.5rem;
+        column-gap: 1rem;
     }
 
     .inline-list {
